--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,9 +28,20 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  http: 1.2.0
-  fluttertoast: 8.2.4
-  connectivity_plus: 5.0.2
+  http: ^1.2.0
+  fluttertoast: ^8.2.4
+  connectivity_plus: ^5.0.2
+  retrofit: ^4.1.0
+  json_annotation: ^4.8.1
+  dio: ^5.4.0
+  intl: ^0.18.1
+  floor: ^1.4.2
+  provider: ^6.1.1
+  sqflite: ^2.3.2
+  flutter_svg: ^2.0.9
+  hexcolor: ^3.0.1
+  date_format: ^2.0.7
+  date_formatter: ^0.0.4
   flutter:
     sdk: flutter
 
@@ -48,6 +59,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  retrofit_generator: ^8.1.0
+  build_runner: ^2.4.8
+  json_serializable: ^6.7.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
