--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   hexcolor: ^3.0.1
   date_format: ^2.0.7
   date_formatter: ^0.0.4
+  cached_network_image: ^3.3.1
   flutter:
     sdk: flutter
 
