--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,8 +28,13 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  flutter:
+    sdk: flutter
+
+  # The following adds the Cupertino Icons font to your application.
+  # Use with the CupertinoIcons class for iOS style icons.
+  cupertino_icons: ^1.0.2
   http: ^1.2.0
-  fluttertoast: ^8.2.4
   connectivity_plus: ^5.0.2
   retrofit: ^4.1.0
   json_annotation: ^4.8.1
@@ -38,17 +43,8 @@ dependencies:
   floor: ^1.4.2
   provider: ^6.1.1
   sqflite: ^2.3.2
-  flutter_svg: ^2.0.9
-  hexcolor: ^3.0.1
-  date_format: ^2.0.7
-  date_formatter: ^0.0.4
   cached_network_image: ^3.3.1
-  flutter:
-    sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  get_it: ^7.6.7
 
 dev_dependencies:
   flutter_test:
@@ -60,6 +56,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  floor_generator: ^1.4.2
   retrofit_generator: ^8.1.0
   build_runner: ^2.4.8
   json_serializable: ^6.7.1
