--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: ^1.2.0
+  fluttertoast: ^8.2.4
   connectivity_plus: ^5.0.2
   retrofit: ^4.1.0
   json_annotation: ^4.8.1
