--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,12 +40,11 @@ dependencies:
   retrofit: ^4.1.0
   json_annotation: ^4.8.1
   dio: ^5.4.0
-  intl: ^0.18.1
   floor: ^1.4.2
   provider: ^6.1.1
   sqflite: ^2.3.2
   cached_network_image: ^3.3.1
-  get_it: ^7.6.7
+  google_fonts: ^6.1.0
 
 dev_dependencies:
   flutter_test:
@@ -74,7 +73,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
